# coresense_understanding

./: .gitmodules  CMakeLists.txt  README.md  dependencies.repos  install.sh  package.xml
config/: coresense_engine.json  start_session.json
include/coresense_understanding/: agent_model.hpp  knowledge_model.hpp  model.hpp  query_get_modelets.sparql  session.hpp  system_model.json  theory.hpp  understanding_graph.hpp  vampire_interface.hpp
scripts/: requirement_enforcer_node  understanding_system_node.py
src/: agent_model.cpp  coresense_understanding.cpp  knowledge_model.cpp  model.cpp  session.cpp  theory.cpp  understanding_graph.cpp  vampire_interface.cpp
