<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coresense_understanding</name>
  <version>0.0.0</version>
  <description>CoreSense Understanding System</description>
  <maintainer email="A.Gabriel@tudelft.nl">Alex Gabriel</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend> <!--This lets us build python using cmake. In a pure python node, this would be ament_python instead... -->

  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>tinyxml2_vendor</build_depend>
  <build_depend>nlohmann_json_schema_validator_vendor</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>coresense_vampire</depend>
  <depend>coresense_msgs</depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
